--- a/project/pubspec.yaml
+++ b/project/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   geocoding: ^2.0.4
   maps_launcher: ^2.0.1
   flutter_screenutil: ^5.4.0
+  firebase_core: ^1.15.0
+  firebase_auth: ^3.3.15
 
 dev_dependencies:
   flutter_test:
