--- a/project/pubspec.yaml
+++ b/project/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_screenutil: ^5.4.0
   firebase_core: ^1.15.0
   firebase_auth: ^3.3.15
+  cloud_firestore: ^3.1.13
 
 dev_dependencies:
   flutter_test:
