--- a/project/pubspec.yaml
+++ b/project/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.2
+  modal_bottom_sheet: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -83,6 +84,7 @@ flutter:
    - Assets/icons8-hospital-3-64.png
    - Assets/icons8-address-64.png
    - Assets/ambulance.png
+   - Assets/email-5-64.png
   fonts:
     - family:  MyFlutterApp
       fonts:
