--- a/project/pubspec.yaml
+++ b/project/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^1.15.0
   firebase_auth: ^3.3.15
   cloud_firestore: ^3.1.13
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
