--- a/project/pubspec.yaml
+++ b/project/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.2
   modal_bottom_sheet: ^2.0.1
-  shared_preferences: ^2.0.15
+  #shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
